WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
215432
[WebGL2] releaseShaderCompiler is not allowed to be supported in WebGL
https://bugs.webkit.org/show_bug.cgi?id=215432
Summary
[WebGL2] releaseShaderCompiler is not allowed to be supported in WebGL
James Darpinian
Reported
2020-08-12 15:35:55 PDT
[WebGL2] releaseShaderCompiler is not allowed to be supported in WebGL
Attachments
Patch
(9.94 KB, patch)
2020-08-12 15:36 PDT
,
James Darpinian
no flags
Details
Formatted Diff
Diff
fix recording tests
(34.65 KB, patch)
2020-08-13 10:32 PDT
,
James Darpinian
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
James Darpinian
Comment 1
2020-08-12 15:36:57 PDT
Created
attachment 406482
[details]
Patch
James Darpinian
Comment 2
2020-08-12 17:17:00 PDT
Looks like there are a few more layout tests I'll need to fix up.
EWS
Comment 3
2020-08-12 17:21:43 PDT
Found 3 new test failures: inspector/canvas/recording-webgl-frameCount.html, inspector/canvas/recording-webgl-full.html, inspector/canvas/recording-webgl-memoryLimit.html
James Darpinian
Comment 4
2020-08-13 10:32:01 PDT
Created
attachment 406523
[details]
fix recording tests
EWS
Comment 5
2020-08-14 15:33:52 PDT
Committed
r265711
: <
https://trac.webkit.org/changeset/265711
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 406523
[details]
.
Radar WebKit Bug Importer
Comment 6
2020-08-14 15:34:38 PDT
<
rdar://problem/67102242
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug