[WebGL2] releaseShaderCompiler is not allowed to be supported in WebGL https://bugs.webkit.org/show_bug.cgi?id=215432

Patch by James Darpinian <jdarpinian@chromium.org> on 2020-08-14
Reviewed by Dean Jackson.

Source/WebCore:

Fixes WebGL conformance tests methods.html and methods-2.html

* html/canvas/WebGLRenderingContextBase.cpp:
(WebCore::WebGLRenderingContextBase::releaseShaderCompiler): Deleted.
* html/canvas/WebGLRenderingContextBase.h:
* html/canvas/WebGLRenderingContextBase.idl:
* platform/graphics/angle/GraphicsContextGLANGLE.cpp:
(WebCore::GraphicsContextGLOpenGL::releaseShaderCompiler): Deleted.
* platform/graphics/opengl/GraphicsContextGLOpenGL.h:
* platform/graphics/opengl/GraphicsContextGLOpenGLBase.cpp:
(WebCore::GraphicsContextGLOpenGL::releaseShaderCompiler): Deleted.
* platform/graphics/opengl/GraphicsContextGLOpenGLES.cpp:
(WebCore::GraphicsContextGLOpenGL::releaseShaderCompiler): Deleted.

LayoutTests:

* webgl/1.0.3/conformance/context/methods-expected.txt:
* webgl/2.0.0/conformance/context/methods-expected.txt:
* webgl/2.0.0/conformance2/context/methods-2-expected.txt:

Canonical link: https://commits.webkit.org/228294@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265711 268f45cc-cd09-0410-ab3c-d52691b4dbfc