Source/WebCore/platform/graphics/opengl/GraphicsContextGLOpenGLBase.cpp
@@ -62,12 +62,6 @@
 
 namespace WebCore {
 
-void GraphicsContextGLOpenGL::releaseShaderCompiler()
-{
-    makeContextCurrent();
-    notImplemented();
-}
-
 #if PLATFORM(MAC)
 static void wipeAlphaChannelFromPixels(int width, int height, unsigned char* pixels)
 {
